--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "PuppeteerJenkins",
+  "name": "puppeteerjenkins",
   "version": "1.0.0",
   "description": "CI / CD with Puppeteer and Jenkins",
   "main": "index.js",
   "scripts": {
-    "e2e-test": "./node_modules/mocha/bin/mocha --timeout=30000 ./tests/e2e.test.js",
-    "smoke-test": "./node_modules/mocha/bin/mocha --timeout=30000 ./tests/smoke.test.js"
+    "e2e-test": "node ./node_modules/mocha/bin/mocha --timeout=30000 ./tests/e2e.test.js",
+    "smoke-test": "node ./node_modules/mocha/bin/mocha --timeout=30000 ./tests/smoke.test.js"
   },
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "Puppeteer",
     "Jenkins"
   ],
-  "author": "",
+  "author": "Martin",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/marb61a/puppeteerjenkins/issues"
@@ -25,5 +25,8 @@
     "chai": "^4.2.0",
     "mocha": "^8.1.3",
     "puppeteer": "^5.3.0"
+  },
+  "comments": {
+    "scripts testing": "need to add node to the start of the test file in order for tests to run on windows"
   }
 }
